src/main/resources/tests/Semantics/bad/declarationAlready.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure UniqueIdentifiers is
   A : integer;
   A : integer; -- Doit générer une erreur de compilation car 'A' est déjà déclaré.
begin
   put('E');
end UniqueIdentifiers;
